--- a/scrap notes/reading notes/小王子.md
+++ b/scrap notes/reading notes/小王子.md
@@ -11,3 +11,10 @@
  * [nevermore](https://www.vocabulary.com/dictionary/nevermore)
  * [pondered](https://www.vocabulary.com/dictionary/pondered)
  * [adventures](https://www.vocabulary.com/dictionary/adventures)
+
+ * [ascend](https://www.vocabulary.com/dictionary/ascend)
+ * [interpret](https://www.vocabulary.com/dictionary/interpret)
+ * [atonement](https://www.vocabulary.com/dictionary/atonement)
+ * [tonnage](https://www.vocabulary.com/dictionary/tonnage)
+ * [modulation](https://www.vocabulary.com/dictionary/modulation)
+ * [be amiss](https://www.vocabulary.com/dictionary/be%20amiss)
