--- a/scrap notes/reading notes/小王子.md
+++ b/scrap notes/reading notes/小王子.md
@@ -18,3 +18,8 @@
  * [tonnage](https://www.vocabulary.com/dictionary/tonnage)
  * [modulation](https://www.vocabulary.com/dictionary/modulation)
  * [be amiss](https://www.vocabulary.com/dictionary/be%20amiss)
+
+冷饮
+ * [sherbet](https://www.vocabulary.com/dictionary/sherbet)
+ * [popsicle](https://www.vocabulary.com/dictionary/popsicle)
+ * [choreography](https://www.vocabulary.com/dictionary/choreography)
