--- a/scrap notes/📶.md
+++ b/scrap notes/📶.md
@@ -1,6 +1,6 @@
 # 電波
 
-## 
+## thinking
 
 创建小贴条
 
@@ -18,7 +18,6 @@
 
 生命周期……J
 
-
 ## Waifu
 
 草稿，骨架 -> 发，五官。之间的关系。
@@ -34,5 +33,3 @@
 后端大概是python。
 
 能加上人工智能，怎么训练？
-
-
